Write rating implemented